--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ Thumbs.db
 !wp-content/mu-plugins/example-mu-plugin/
 !wp-content/plugins/example-plugin/
 !wp-content/themes/example-theme/
+!docs/
